--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-joblib
-keras
-nltk
-numpy
-scikit-learn
-streamlit
-tensorflow-cpu
+joblib==1.3.2
+keras==3.0.2
+nltk==3.8.1
+numpy==1.26.3
+scikit-learn==1.3.2
+streamlit==1.30.0
+tensorflow-cpu==2.15.0.post1
